# codal-circuit-playground

./: .gitignore  CMakeLists.txt  conf_clocks.h  device_fiber.h  doxy-config.cfg  index.html  mkdocs.yml  sitemap.xml  target-locked.json  target.json
CIRCUIT_PLAYGROUND/inc/: DynamicPwm.h  SAMD21DAC.h  SAMD21DMAC.h  SAMD21PDM.h  TargetConfig.h  common_includes.h
CIRCUIT_PLAYGROUND/model/: CircuitPlayground.cpp  CircuitPlayground.h  CircuitPlaygroundIO.cpp  CircuitPlaygroundIO.h
CIRCUIT_PLAYGROUND/source/: DynamicPwm.cpp  MbedTimedInterruptIn.cpp  SAMD21DAC.cpp  SAMD21DMAC.cpp  SAMD21PDM.cpp  USB.cpp  codal_target_hal.cpp
cplay/: index.html
cplay/accelerometer/: index.html
cplay/button/: index.html
cplay/i2c/: index.html
cplay/io/: index.html
cplay/messageBus/: index.html
cplay/multibutton/: index.html
cplay/serial/: index.html
cplay/thermometer/: index.html
device/: index.html
docs/: advanced.md  concepts.md  cplay.md  device.md  help.md  index.md  offline-toolchains.md
docs/cplay/: accelerometer.md  button.md  i2c.md  io.md  messageBus.md  multibutton.md  serial.md  thermometer.md
docs/data-types/: event.md  image.md  packetbuffer.md  string.md
inc/: CPlayI2C.h  CPlayTimer.h  SAMD21DAC.h  SAMD21DMAC.h  conf_clocks.h  device_fiber.h  neopixel.h
ld/: samd21g18a.ld
mkdocs/: search_index.json
model/: CircuitPlayground.cpp  CircuitPlayground.h  CircuitPlaygroundIO.cpp  CircuitPlaygroundIO.h
samples/: main.cpp
samples/AccelerometerTest/: AccelerometerTest.cpp
samples/Audio/: AudioTest.cpp
samples/AudioMicTest/: AudioMicTest.cpp
samples/AudioSynthTest/: AudioSynthTest.cpp
samples/AudioSynthTest2/: AudioSynthTest2.cpp
samples/ButtonEvents/: ButtonEvents.cpp
samples/HelloWorld/: HelloWorld.cpp
samples/LightSensorTest/: LightSensorTest.cpp
samples/SimpleButtonTest/: SimpleButtonTest.cpp
samples/SimplePWM/: SimplePWM.cpp
samples/ThermometerTest/: ThermometerTest.cpp
samples/TouchTest/: TouchTest.cpp
samples/USB/joystick/: main.cpp
samples/USB/keyboard/: main.cpp
samples/USB/mouse/: main.cpp
samples/blinky/: Blinky.cpp
source/: CPlayI2C.cpp  CPlayTimer.cpp  SAMD21PDM.cpp  codal_target_hal.cpp  startup_samd21.c
theme/: nav.html
theme/css/: extra.css
